--- a/src/app.css
+++ b/src/app.css
@@ -21,6 +21,14 @@ body {
   padding: 0 5rem;
   
 }
+.containerFilter{
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  align-items: flex-end;
+  justify-content: center;
+  padding: 100px 80px;
+}
 
 .container-component{
   margin: 1rem 0;
